    - Added support for saving text mode snapshot in BMP format.
    - Write marker to log file by pressing "m" button (guis with "cmdmode" on).
    - X11 keymaps: added new one for Swiss-German and improved Italian map.
    - RFB / vncsrv: VGA features h/v pel panning and split screen now supported.
    - RFB: added support for the pixel format RGB332.
    - win32: added display library option "autoscale" to scale a small
      simulation window by factor 2, 4 or 8 depending in desktop window size.
    - wx: fixed status bar handling to avoid segfaults and deadlocks.

- VGABIOS
  - LGPL'd VGABIOS updated to version 0.8a.
    - Added initial version of the VGABIOS for Voodoo Banshee adapters.
    - Added 'write character' support for non-VGA 8-bpp modes (Bochs VBE /
      Cirrus / Banshee). Cirrus code uses bitblt engine.
    - Fixed text output and scrolling in VGA graphics modes.
    - Some small fixes in the VBE code and several code optimizations.

- Misc
  - Added support for converting VDI images to another format with bximage.

-------------------------------------------------------------------------
Changes in 2.6.11 (January 5, 2020):

- General
  - Added 64-bit support to the NSIS installer script
  - Several fixes in the build system based on Debian patches

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness
    - Many critical bugfixes for Protection Keys, AVX512*, VMX/SVM, SHA, GFNI emulation
  ! Implemented CET (Control Flow Enforcement Technology) emulation according to Intel SDM rev071

- I/O Devices
  - Added missing Cirrus SVGA bitblt feature "transparent color compare"
  - Some fixes in HPET emulation (patch by Oleg)
  - Fixed disk image lock mechanism in the USB MSD case

- BIOS / VGABIOS
  - LGPL'd VGABIOS updated to version 0.7b (Fixed VESA extension 'read EDID'
    for Bochs VBE and Cirrus)
  - Updated SeaBIOS ROM image to current version 1.13.0
  - Added SeaVGABIOS ROM image for the Cirrus adapter